2006-12-18  Sébastien Sablé  <sable.sungard@gmail.com>

	* Sybase.py: Corrected Date, Time and Timestamp functions when
	using mx.DateTime or native python datetime types

	* Sybase.py: Corrected DATETIME as cursor.description still
	returns native Sybase datetime types

2006-12-14  Sébastien Sablé  <sable.sungard@gmail.com>

	* blk.c: Corrected blk_describe always returns (status, None)
	thanks to patch by Phil Porter

2006-12-13  Sébastien Sablé  <sable.sungard@gmail.com>

	* databuf.c, datafmt.c: Patch to handle CS_LONG type based on
	patch by Paul Rensing

2006-12-08  Sébastien Sablé  <sable.sungard@gmail.com>

	* setup.py, Sybase.py: Changing to release 0.38pre1

	* Sybase.py: Adding support for python native datetime type for
	dates - there is a new "datetime" argument to connect in order to
	choose the datetime type

	* setup.py: Corrected compilation in 64 bits mode based on a patch
	by Harri Pasanen

	* setup.py: Corrected linking with Sybase 15.0

2006-12-07  Sébastien Sablé  <sable.sungard@gmail.com>

	* Sybase.py: Factored out Cursor._checkready() - patch provided by
	Greg Ward

	* Sybase.py: Corrected tests test_description and test_rowcount -
	"This routine cannot be called because another command structure
	has results pending." when manually commiting after a select
	without fetching

	* Sybase.py: Corrected test test_ExceptionsAsConnectionAttributes
	- Added Exceptions as attributes of Connection based on patch by
	Greg Ward

	* Sybase.py: Corrected test test_non_existing_proc - Raising
	StoredProcedureError when calling a non-existing stored procedure

	* Sybase.py: Corrected test test_duplicate_error - Raising
	IntegrityError exception when trying to insert a duplicate value

	* Sybase.py: Corrected tests test_bug_result_pending3_fetchall,
	test_fetchall and test_fetchmany - "This routine cannot be called
	because another command structure has results pending." when
	manually commiting after a fetchall()
