@@ -111,6 +111,13 @@ syb_macros = [('WANT_BULKCOPY', None)]
 if have64bit:
     syb_macros.append(('SYB_LP64', None))
 
+try:
+    import datetime
+except ImportError:
+    pass
+else:
+    syb_macros.append(('HAVE_DATETIME', None))
+
 # distutils does not allow -D HAVE_FREETDS=60 so I have to find this
 # argument myself and remove it from sys.argv and set the macro via
 # the define_macros argument to the extension module.
